crates/formatter/tests/snapshots/snapshots__synapse__main__delta__79__05_read_write_locks_triggers.sqlite.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2023 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- Fix up the triggers that were in `78/04_read_write_locks_triggers.sql`

-- Add a trigger to UPSERT into `worker_read_write_locks_mode` whenever we try
-- and acquire a lock, i.e. insert into `worker_read_write_locks`,
drop trigger if exists upsert_read_write_lock_parent_trigger;
create trigger if not exists upsert_read_write_lock_parent_trigger
	before insert on worker_read_write_locks
	for each row begin
	-- First ensure that `worker_read_write_locks_mode` doesn't have stale
	-- entries in it, as on SQLite we don't have the foreign key constraint to
	-- enforce this.
	delete from worker_read_write_locks_mode
	where
		lock_name = NEW.lock_name
		and lock_key = NEW.lock_key
		and not exists (
			select 1
			from worker_read_write_locks
			where lock_name = NEW.lock_name and lock_key = NEW.lock_key
		); insert into worker_read_write_locks_mode (
		lock_name,
		lock_key,
		write_lock,
		token
	) values (
		NEW.lock_name,
		NEW.lock_key,
		NEW.write_lock,
		NEW.token
	) on conflict (lock_name, lock_key) do update set write_lock = NEW.write_lock,
	token = NEW.token; end;

-- Ensure that we keep `worker_read_write_locks_mode` up to date whenever a lock
-- is released (i.e. a row deleted from `worker_read_write_locks`). Either we
-- update the `worker_read_write_locks_mode.token` to match another instance
-- that has currently acquired the lock, or we delete the row if nobody has
-- currently acquired a lock.
drop trigger if exists delete_read_write_lock_parent_trigger;
create trigger if not exists delete_read_write_lock_parent_trigger
	after delete on worker_read_write_locks
	for each row begin delete from worker_read_write_locks_mode
	where
		lock_name = OLD.lock_name
		and lock_key = OLD.lock_key
		and token = OLD.token
		and not exists (
			select 1
			from worker_read_write_locks
			where lock_name = OLD.lock_name and lock_key = OLD.lock_key
		); update worker_read_write_locks_mode set token = (
		SELECT token from worker_read_write_locks where lock_name = OLD.lock_name and lock_key = OLD.lock_key
	)
	where lock_name = OLD.lock_name and lock_key = OLD.lock_key; end;
